2.8 hits working