@@ -37,7 +37,7 @@ public class HITSRanker {
     HashMap<String,Integer> titleToId = new HashMap<String,Integer>();
 
     /** Mapping from document identifiers to document names. */
-    public HashMap<String,Integer> nameToId = new HashMap<>();
+    public HashMap<Integer, String> idToTitle = new HashMap<>();
 
     /**
      * Mapping from document names to document numbers.
@@ -58,6 +58,8 @@ public class HITSRanker {
     HashMap<Integer, HashSet<Integer>> At = new HashMap<>();
 
     Integer number_of_docs;
+
+    HashMap<String, Integer> nameToRealID;
 
     
     /* --------------------------------------------- */
@@ -86,6 +88,7 @@ public class HITSRanker {
     public HITSRanker( String linksFilename, String titlesFilename, Index index ) {
         this.index = index;
         readDocs( linksFilename, titlesFilename );
+        reverseDocNames();
     }
 
 
@@ -129,7 +132,8 @@ public class HITSRanker {
             while ((line = br.readLine()) != null) {
                 String[] res = line.split(";");
                 //String[] nameList = res[1].split("/");
-                titleToId.put(res[1], new Integer(res[0]));
+                titleToId.put(res[1], Integer.valueOf(res[0]));
+                idToTitle.put(Integer.valueOf(res[0]), res[1]);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -138,14 +142,14 @@ public class HITSRanker {
             String line;
             while ((line = br.readLine()) != null) {
                 String[] res = line.split(";");
-                int docID = new Integer(res[0]);
+                int docID = Integer.parseInt(res[0]);
                 docs.add(docID);
                 if (res.length > 1) {
                     String[] pointingTo = res[1].split(",");
                     HashSet<Integer> toList = new HashSet<>();
 
                     for (String id : pointingTo) {
-                        toList.add(new Integer(id));
+                        toList.add(Integer.valueOf(id));
                     }
                     A.put(docID, toList);
 
@@ -155,9 +159,9 @@ public class HITSRanker {
                         from = At.get(target);
                         if (from == null) {
                             from = new HashSet<>();
+                            At.put(target, from);
                         }
                         from.add(docID);
-                        At.put(target, from);
                     }
                 }
             }
@@ -177,12 +181,12 @@ public class HITSRanker {
      */
     private void iterate(String[] titles) {
 
-        int[] docID = new int[titles.length];
+        HashSet<Integer> docID = new HashSet<>();
 
-        for (int i = 0; i < docID.length; ++i) {
+        for (int i = 0; i < titles.length; ++i) {
             Integer linkFile = titleToId.get(titles[i]);
             //Integer idMatrix = docNumber.get(Integer.toString(linkFile));
-            docID[i] = linkFile;
+            docID.add(linkFile);
         }
         iterate(docID);
     }
@@ -215,8 +219,7 @@ public class HITSRanker {
         }
     }
 
-
-    private void iterate(int[] docsID) {
+    private void iterate(HashSet<Integer> docsID) {
         double[] auth_ant = new double[number_of_docs+1];
 
         double[] auth = new double[number_of_docs+1];
@@ -265,55 +268,6 @@ public class HITSRanker {
 
     }
 
-
-    private void iterateFast(int[] docsID) {
-        double[] auth_ant = new double[number_of_docs+1];
-
-        double[] auth = new double[number_of_docs+1];
-        Arrays.fill(auth, 1.);
-
-        double[] hub = new double[number_of_docs+1];
-        Arrays.fill(hub, 1.);
-        double[] hub_ant = new double[number_of_docs+1];
-
-        int iteration = 0;
-        boolean stop = false;
-        while (!stop) {
-            double[] aux_auth = auth.clone();
-            double[] aux_hub = hub.clone();
-            for (Integer id : At.keySet()) {
-                for (int pointed : At.get(id)) {
-                    auth[id] += aux_hub[pointed];
-                }
-            }
-            for (Integer id : A.keySet()) {
-                for (int pointed : A.get(id)) {
-                    hub[id] += aux_auth[pointed];
-                }
-            }
-
-            normalize(hub, auth);
-
-            stop = diffVector(hub, hub_ant, auth, auth_ant);
-            auth_ant = auth.clone();
-            hub_ant = hub.clone();
-            ++iteration;
-            //System.out.println("iteration " + iteration);
-        }
-        hubs = new HashMap<>();
-        authorities = new HashMap<>();
-        for (int i = 0; i < hub.length; ++i) {
-            if (hub[i] != 0) {
-                hubs.put(i, hub[i]);
-            }
-            if (auth[i] != 0) {
-                authorities.put(i, auth[i]);
-            }
-        }
-
-    }
-
-
     /**
      * Rank the documents in the subgraph induced by the documents present
      * in the postings list `post`.
@@ -325,34 +279,71 @@ public class HITSRanker {
     PostingsList rank(PostingsList post) {
         PostingsList answer = new PostingsList();
 
-        int[] docID = new int[post.size()];
+        HashSet<Integer> docID = new HashSet<>();
         HashMap<Integer, Integer> IDtoInternalID = new HashMap<>();
         for (int i = 0; i < post.size(); ++i) {
             int goodID = post.get(i).docID;
             String name = index.docNames.get(goodID);
-            name = name.split("\\\\")[2];
-            if (name != null) {
-                Integer linkFile = titleToId.get(name);
-                docID[i] = linkFile;
-                IDtoInternalID.put(goodID, linkFile);
+            name = name.split("\\\\davisWiki\\\\")[1];
+
+            Integer linkFile = titleToId.get(name);
+            if (linkFile != null) {
+                docID.add(linkFile);
+                IDtoInternalID.put(linkFile, goodID);
             }
 
         }
-        iterate(docID);
-        double sumHubs = hubs.values().stream().reduce(0., Double::sum);
-        double sumAuth = hubs.values().stream().reduce(0., Double::sum);
-        for (PostingsEntry postingsEntry : post.getList()) {
-            int id = postingsEntry.docID;
-            Integer internalID = IDtoInternalID.get(id);
-            if (internalID != null) {
-                double h = hubs.getOrDefault(internalID, 0.);
-                double auth = authorities.getOrDefault(internalID, 0.);
-                double score = ((h) + (auth)) / 2.;
-                answer.addEntry(new PostingsEntry(id, score));
+        long startTime = System.currentTimeMillis();
+
+        HashSet<Integer> base = calculateBaseSet(docID);
+
+        long elapsedTime = System.currentTimeMillis() - startTime;
+        System.err.println("Indexing done in %.1f seconds. "+ String.valueOf(elapsedTime/1000.0 ));
+
+        startTime = System.currentTimeMillis();
+
+        iterate(base);
+
+        elapsedTime = System.currentTimeMillis() - startTime;
+        System.err.println("Indexing done in %.1f seconds. "+ String.valueOf(elapsedTime/1000.0 ));
+
+        int cont = 0;
+        //double sumHubs = hubs.values().stream().reduce(0., Double::sum);
+        //double sumAuth = hubs.values().stream().reduce(0., Double::sum);
+        for (int id : base) {
+            String name = idToTitle.get(id);
+            Integer realID = nameToRealID.get(name);
+            if (realID != null) {
+                ++cont;
+                double h = hubs.getOrDefault(id, 0.);
+                double auth = authorities.getOrDefault(id, 0.);
+                double score = ((h) + (auth));
+                answer.addEntry(new PostingsEntry(realID, score));
             }
         }
+        System.err.println(cont);
         Collections.sort(answer.getList());
         return answer;
+    }
+
+    public void reverseDocNames() {
+        nameToRealID = new HashMap<>();
+        for(Map.Entry<Integer, String> entry : index.docNames.entrySet()) {
+            String name = entry.getValue();
+            nameToRealID.put(name.split("\\\\")[2], entry.getKey());
+        }
+    }
+
+    private HashSet<Integer> calculateBaseSet(HashSet<Integer> docID) {
+        HashSet<Integer> base = new HashSet<>();
+        for (int id : docID) {
+            base.add(id);
+            HashSet<Integer> set = A.get(id);
+            if (set != null) base.addAll(set);
+            set = At.get(id);
+            if (set != null) base.addAll(set);
+        }
+        return base;
     }
 
 
